--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,32 @@
 
-# requirements.txt (flexible versions)
+### Core dependencies
+pandas>=2.0.0
+numpy>=1.24.0
 
-### Core
-pandas>=1.5.0
-numpy>=1.21.0
+### Jupyter notebook support (optional)
+jupyter>=1.0.0
+notebook>=7.0.0
+ipykernel>=6.25.0
 
-### Notebook
-jupyter
-notebook
-ipykernel
+### Real dataset sources
+yfinance>=0.2.28
+openml>=0.14.0
+wbdata>=1.0.0
+seaborn>=0.12.0
+scikit-learn>=1.3.0
 
-### Data sources
-yfinance
-openml
-wbdata
-seaborn
-scikit-learn
+### Kaggle API (for Kaggle datasets)
+kaggle>=1.5.16
 
-### Kaggle
-kaggle
+### Data visualization (optional but recommended)
+matplotlib>=3.7.0
+plotly>=5.17.0
 
-### Viz
-matplotlib
-plotly
+### Utils for data processing
+requests>=2.31.0
+openpyxl>=3.1.0  # For Excel file support
+xlrd>=2.0.1      # For older Excel formats
 
-### Utils
-requests
-openpyxl
-xlrd
-
-### Testing
-pytest
-pytest-cov
+### Testing (optional)
+pytest>=7.4.0
+pytest-cov>=4.1.0
